--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sentry/vue": "^8.33.1",
+    "pinia": "^2.1.0",
     "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
-    "pinia": "^2.1.0"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.0",
