--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@sentry/vue": "^8.33.1",
     "pinia": "^2.1.0",
     "vue": "^3.3.0",
