--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.0",
     "vite": "^4.5.0"
   }
