--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "your-monorepo",
-  "private": true,
-  "workspaces": [
-    "frontend"
-  ],
+  "name": "your-store-website",
+  "version": "1.0.0",
   "scripts": {
-    "dev:frontend": "npm run dev --workspace=frontend",
-    "dev:backend": "uvicorn backend.main:app --reload",
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\""
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "vite",
+    "dev:backend": "uvicorn api.main:app --reload",
+    "build": "vite build",
+    "preview": "vite preview",
+    "serve": "vite preview"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@sentry/vite-plugin": "^2.22.5",
+    "@sentry/vue": "^8.33.1",
+    "pinia": "^2.1.0",
+    "vue": "^3.3.0",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.2.0",
+    "@vitejs/plugin-vue": "^4.2.0",
+    "vite": "^4.5.0",
     "concurrently": "^7.0.0"
   }
 }
