--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev:backend": "uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload",
     "build": "vite build",
     "preview": "vite preview",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest --config src/jest.config.cjs",
+    "test:frontend": "npm run test",
+    "test:backend": "pytest --cov=api api/tests/",
+    "test:stack": "npm run test:frontend && npm run test:backend"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +26,16 @@
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
     "@codecov/vite-plugin": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.0",
-    "vite": "^4.5.0",
-    "concurrently": "^7.0.0"
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "@vue/vue3-jest": "^29.2.6",
+    "babel-jest": "^29.7.0",
+    "concurrently": "^7.0.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "vite": "^4.5.0"
   }
 }
