--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "test": "jest --config jest.config.cjs",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -13,12 +14,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vue/test-utils": "^2.4.6",
+    "pinia": "^2.0.0",
     "vue": "^3.2.0",
-    "vue-router": "^4.0.0",
-    "pinia": "^2.0.0"
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-typescript": "^7.25.7",
     "@vitejs/plugin-vue": "^4.0.0",
+    "babel-jest": "^29.7.0",
     "vite": "^4.0.0"
   }
 }
