--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Run backend tests
       run: |
         cd api
+        export PYTHONPATH=$(pwd)
         pytest --cov=api tests/
 
     - name: Set up Node.js
