--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,12 @@ jobs:
         export PYTHONPATH=$(pwd)
         pytest --cov=api api/tests/ --cov-report=xml
 
+    - name: Upload results to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: smeubank/vue-store-pinia
+    
     - name: Upload backend coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
