--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,10 @@
     "@babel/preset-typescript": "^7.25.7",
     "@vitejs/plugin-vue": "^4.0.0",
     "babel-jest": "^29.7.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "@vue/vue3-jest": "^29.2.6",
     "vite": "^4.0.0"
   }
 }
