feat: integrate Sentry v10 and Supabase for full-stack observability
- Update Sentry SDKs to v10 across all platforms (Vue, Python, Deno)
- Integrate Supabase for auth, storage, and database
- Add distributed tracing from Vue → FastAPI → Edge Function → DB
- Implement structured logging across all services
- Add Supabase Edge Function for order creation with tracing
- Create comprehensive documentation (README, issues, security audit)
- Fix checkout page to handle numeric prices from Supabase
- Add Google OAuth authentication flow
- Store product catalog in Supabase PostgreSQL
- Serve product images from Supabase Storage

Demos:
- Full-stack distributed tracing
- Sentry structured logs in Vue, Python, and Deno
- Supabase integration patterns for multiple SDKs
- Edge Function observability

Documentation:
- SENTRY_ISSUES.md: SDK gaps and distributed tracing bug
- DENO_TRACING_BUG.md: GitHub issue for Sentry team
- SECURITY_AUDIT.md: Public vs secret credentials guide
- IMPLEMENTATION_PLAN.md: Complete project roadmap

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "vite",
-    "dev:backend": "uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload",
+    "dev:backend": "~/Library/Python/3.9/bin/uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload",
     "build": "vite build",
     "preview": "vite preview",
     "serve": "vite preview",
@@ -20,8 +20,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@sentry/vite-plugin": "^2.22.5",
-    "@sentry/vue": "^8.37.0",
+    "@sentry/vue": "^10.22.0",
+    "@supabase/supabase-js": "^2.48.1",
     "pinia": "^2.1.0",
+    "supabase": "^2.54.11",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
